--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "webpack --watch",
     "build": "webpack --config webpack.config.js",
-    "tailwind": "npx tailwindcss -i ./src/input.css -o ./dist/output.css --watch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -19,14 +19,10 @@
   },
   "homepage": "https://github.com/Godnoken/restaurantpage#readme",
   "devDependencies": {
-    "autoprefixer": "^10.4.4",
     "css-loader": "^6.7.1",
     "css-minimizer-webpack-plugin": "^3.4.1",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.6.0",
-    "postcss": "^8.4.12",
-    "postcss-loader": "^6.2.1",
-    "tailwindcss": "^3.0.23",
     "terser-webpack-plugin": "^5.3.1",
     "webpack": "^5.70.0",
     "webpack-cli": "^4.9.2"
